--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactapp",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://tdshivendran.github.io/Homepage",
+  "homepage": "https://tdshivendran.github.io/Homepage",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -15,7 +15,8 @@
     "chalk": "1.1.3",
     "create-react-class": "^15.6.3",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
+    "env2": "^2.2.2",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
@@ -39,6 +40,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-forecast": "0.0.7",
+    "react-scripts": "^1.1.4",
     "react-weather": "^0.1.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -97,5 +99,17 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "description": "A simple static page that features To-Do, calendar, quote generator and a weather widget to help users improve productivity.",
+  "main": "printenv.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tdshivendran/Homepage.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tdshivendran/Homepage/issues"
   }
 }
