--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-weather": "^0.1.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "unsplash-js": "^4.8.0",
     "url-loader": "0.6.2",
     "weather-icons": "^1.3.2",
     "webpack": "3.8.1",
